Day 1 - reactive forms basics, validation

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+ng generate component pages/editForm
+ng g c pages/editForm
+
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
